--- a/.github/workflows/coffin.yml
+++ b/.github/workflows/coffin.yml
@@ -23,9 +23,9 @@ jobs:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Download Important Files.
       run: |
-        Invoke-WebRequest https://raw.githubusercontent.com/TerminalPR0/coffinRD/main/Files/NGROK-US.bat -OutFile NGROK-US.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/TerminalPR0/coffinRD/main/Files/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/TerminalPR0/coffinRD/main/Files/loop.bat -OutFile loop.bat
+        Invoke-WebRequest https://github.com/TerminalPR0/coffinRD/blob/main/Files/NGROK-US.bat?raw=true -OutFile NGROK-US.bat
+        Invoke-WebRequest https://github.com/TerminalPR0/coffinRD/blob/main/Files/NGROK-CHECK.bat?raw=true -OutFile NGROK-CHECK.bat
+        Invoke-WebRequest https://github.com/TerminalPR0/coffinRD/blob/main/Files/loop.bat?raw=true -OutFile loop.bat
     - name: Make YML file for NGROK.
       run: start NGROK-US.bat
     - name: Enable RDP Access.
